--- a/proj4/index.html
+++ b/proj4/index.html
@@ -497,19 +497,19 @@
         </tr>
         <tr align="center">
           <td>
-              <img src="img/p5_bump_16.png" align="middle" width="400px" />
-              <figcaption>Bump mapping on sphere with -o 16 -a 16 (sphere.json)</figcaption>
+              <img src="img/p5_disp_sphere.png" align="middle" width="400px" />
+              <figcaption>Displacement mapping on sphere (sphere.json)</figcaption>
           </td>
           <td>
-              <img src="img/p5_bump_128.png" align="middle" width="400px" />
-              <figcaption>Bump mapping on sphere with -o 128 -a 128 (sphere.json)</figcaption>
+              <img src="img/p5_disp_cloth.png" align="middle" width="400px" />
+              <figcaption>Displacement mapping on cloth (sphere.json)</figcaption>
           </td>
       </tr>
     </table>
   </div>
   <p>
     We then update the coarseness of the sphere mesh to 16 and 128 and observe the difference. For bump mapping, since it only use visual illusion without actually changing the 
-    surface, we cannot tell a huge different after changing the coarseness. But for displacement mapping, the change is much more obvious. With larger coarseness (128), the vertices on
+    surface, we cannot tell a huge different after changing the coarseness, besides a small change in light shading. But for displacement mapping, the change is much more obvious. With larger coarseness (128), the vertices on
     surface vary more. Hence, visually the sphere looks more coarse for 128 than 16 coarseness.
   </p>
   <div align="middle">
@@ -526,12 +526,12 @@
         </tr>
         <tr align="center">
           <td>
-              <img src="img/p5_bump_16.png" align="middle" width="400px" />
-              <figcaption>Bump mapping on sphere with -o 16 -a 16 (sphere.json)</figcaption>
+              <img src="img/p5_disp_16.png" align="middle" width="400px" />
+              <figcaption>Displacement mapping on sphere with -o 16 -a 16 (sphere.json)</figcaption>
           </td>
           <td>
-              <img src="img/p5_bump_128.png" align="middle" width="400px" />
-              <figcaption>Bump mapping on sphere with -o 128 -a 128 (sphere.json)</figcaption>
+              <img src="img/p5_disp_128.png" align="middle" width="400px" />
+              <figcaption>Displacement mapping on sphere with -o 128 -a 128 (sphere.json)</figcaption>
           </td>
       </tr>
     </table>
