add proposal link

--- a/final_project/milestone/index.html
+++ b/final_project/milestone/index.html
@@ -85,6 +85,8 @@
 
     <br /><br />
 
+	
+	<h3 align="middle">Proposal Link: <a href="https://zhaominl.github.io/project-webpage-qq360/final_project/proposal/index.html">Link</a></h3>
     </o>
 
 
