--- a/final_project/milestone/index.html
+++ b/final_project/milestone/index.html
@@ -21,7 +21,7 @@
             color: #121212;
         }
     </style>
-    <title>CS 184 Path Tracer</title>
+    <title>CS 284A Final Project Milestone</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro" rel="stylesheet" />
 
@@ -42,34 +42,17 @@
 <body>
 
     <h1 align="middle">CS 284A: Computer Graphics and Imaging, Spring 2023</h1>
-    <h1 align="middle">Final Project Proposal</h1>
+    <h1 align="middle">Final Project Milestone</h1>
     <h2 align="middle">Zhengjiang He</h2>
     <h2 align="middle">Hirotaka Ishihara</h2>
     <h2 align="middle">Chaomin Li</h2>
     <h2 align="middle">Zhiqi Yan</h2>
-
-    <!-- Add Website URL -->
-    <h2 align="middle">Website URL: <a href="https://zhaominl.github.io/project-webpage-qq360/final_project/proposal/index.html">LINK</a></h2>
 
     <br /><br />
 
 	<h2 align="middle">Project Title</h2>
     <p align="middle">3D Fluid Dynamics Simulation of Different Smoke Compositions and Containers
     </p>
-
-    <br /><br />
-
-	<h2 align="middle">Team members</h2>
-    <ol>
-        <li>Zhengjiang He (CS284A),  zhengjiang.he@berkeley.edu
-        </li>
-        <li>Hirotaka Ishihara (CS284A), hirotaka.ishihara@berkeley.edu
-        </li>
-        <li>Chaomin Li (CS284A), zhaominl@berkeley.edu
-        </li>
-        <li>Zhiqi Yan (CS284A),  zhiqiyan@berkeley.edu
-        </li>
-    </ol>
 
     <br /><br />
 
