--- a/final_project/milestone/index.html
+++ b/final_project/milestone/index.html
@@ -61,6 +61,9 @@
     <br /><br />
 
 	<h2 align="middle">Milestone Video</h2>
+	<iframe align="middle" width="420" height="315"
+		src="https://drive.google.com/file/d/1JmedPqOzSZ848HY7n4sMkX1ZWlRthdiv/view?usp=sharing">
+	</iframe>
 
     <br /><br />
 
