--- a/final_project/milestone/index.html
+++ b/final_project/milestone/index.html
@@ -61,7 +61,7 @@
     <br /><br />
 
 	<h2 align="middle">Milestone Video</h2>
-	<iframe width="420" height="315" align="middle" src="https://www.youtube.com/embed/iZiRFw3IdeI">
+	<iframe width="420" height="315" style="margin:0 auto;display:block" src="https://www.youtube.com/embed/iZiRFw3IdeI">
 	</iframe>
 
     <br /><br />
