--- a/final_project/milestone/index.html
+++ b/final_project/milestone/index.html
@@ -61,12 +61,16 @@
     <br /><br />
 
 	<h2 align="middle">Milestone Video</h2>
-	<iframe width="420" height="315" style="margin:0 auto;display:block" src="https://www.youtube.com/embed/iZiRFw3IdeI">
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/iZiRFw3IdeI" title="YouTube video player" 
+		frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+		allowfullscreen></iframe>
 	</iframe>
 
     <br /><br />
 
     <h2 align="middle">Presentation Slides</h2>
+	<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRFzWTVhcZxpF-Y45_XKwZK2SqpCIgEH1nWq_72lfAmOyapeIr7fJNPrurEF5Pq70X18Ykh_3eiItPO/embed?start=false&loop=false&delayms=3000" 
+		frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
     <br /><br />
 
