--- a/final_project/milestone/index.html
+++ b/final_project/milestone/index.html
@@ -57,6 +57,10 @@
     <br /><br />
 
 	<h2 align="middle">Milestone Status Report</h2>
+	<object data="/uploads/media/default/0001/01/540cb75550adf33f281f29132dddd14fded85bfc.pdf" type="application/pdf" width="100%" height="500px"
+		style="margin:0 auto;display:block">
+      		<p>Unable to display PDF file. <a href="/uploads/media/default/0001/01/540cb75550adf33f281f29132dddd14fded85bfc.pdf">Download</a> instead.</p>
+    	</object>
 
     <br /><br />
 
