--- a/final_project/final/index.html
+++ b/final_project/final/index.html
@@ -72,8 +72,9 @@
 
     <br /><br />
 
-    <h2 align="middle">Presentation Slides</h2>
-	<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRFzWTVhcZxpF-Y45_XKwZK2SqpCIgEH1nWq_72lfAmOyapeIr7fJNPrurEF5Pq70X18Ykh_3eiItPO/embed?start=false&loop=false&delayms=3000" 
+    <h2 align="middle">Presentation Slides</h2>=
+	
+	<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTMV7vdQnDechlYBn61XGZWNmVdTTvZ1PRnRLqrKdRvtjsEeIFYWtRfpMSq2AN1R8e8tjWXSOXcULzG/embed?start=false&loop=false&delayms=3000" 
 		frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"
 		style="margin:0 auto;display:block"></iframe>
 
