--- a/final_project/final/index.html
+++ b/final_project/final/index.html
@@ -51,23 +51,23 @@
     <br /><br />
 
 	<h2 align="middle">Project Title</h2>
-    <p align="middle">3D Fluid Dynamics Simulation of Different Smoke Compositions and Containers
+    <p align="middle">3D Fluid Dynamics Simulation of Smoke and Containers
     </p>
 
     <br /><br />
 
 	<h2 align="middle">Final Report</h2>
-	<object data="CS284_Team12.pdf" type="application/pdf" width="100%" height="500px"
+	<object data="CS284_Team12_FinalReport.pdf" type="application/pdf" width="100%" height="500px"
 		style="margin:0 auto;display:block">
-      		<p>Unable to display PDF file. <a href="CS284_Team12.pdf">Download</a> instead.</p>
+      		<p>Unable to display PDF file. <a href="CS284_Team12_FinalReport.pdf">Download</a> instead.</p>
     	</object>
 
     <br /><br />
 
 	<h2 align="middle">Final Report Video</h2>
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/iZiRFw3IdeI" title="YouTube video player" 
-		frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-		allowfullscreen style="margin:0 auto;display:block"></iframe>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/0H3ZZjvtFR0?start=1" title="YouTube video player" 
+		frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen 
+		style="margin:0 auto;display:block">
 	</iframe>
 
     <br /><br />
@@ -82,7 +82,7 @@
 
 	
 	<h3 align="middle">Proposal Link: <a href="https://zhaominl.github.io/project-webpage-qq360/final_project/proposal/index.html">Link</a></h3>
-  <h3 align="middle">Milestone Link: <a href="https://zhaominl.github.io/project-webpage-qq360/final_project/milestone/index.html">Link</a></h3>
+  	<h3 align="middle">Milestone Link: <a href="https://zhaominl.github.io/project-webpage-qq360/final_project/milestone/index.html">Link</a></h3>
     </o>
 
 
